syntax = "proto3";

package pb;

import "post/post.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message CreatePostRequest {
    string title = 1;
    string short_desc = 2;
    string description = 3;
}

message CreatePostResponse {
    Post post = 1;
}


